HelloUltraviolet/Fixtures/RejectedSource/Statements/UniqueNonMoveBinding/Source/Main.uv
//! Rejected statement specimen for unique binding from a place without move.

public procedure uniqueNonMoveBindingReference() -> i32 {
    let source: unique i32 = 1
    let target: unique i32 = source
    return 0
}
